added features and resized cards

--- a/frontend/src/app/core/components/landing-page/landing-page.component.html
+++ b/frontend/src/app/core/components/landing-page/landing-page.component.html
@@ -1,17 +1,32 @@
-<mat-grid-list cols="3" rowHeight="fit">
+<mat-grid-list cols="3" rowHeight="fit" [gutterSize]="'70px'">
     <mat-grid-tile>
-        <app-section-card [iconName]='"computer"'>
-        </app-section-card> </mat-grid-tile>
-    <mat-grid-tile> <app-speaking-text
-            [text]='"Hi, ich bin der Spion! Du musst mir mit meiner Mission helfen. Viel Erfolg"'>
+        <div style="width: 100%; height: 100%;">
+            <app-section-card [iconName]='"computer"'></app-section-card>
+        </div>
+    </mat-grid-tile>
+    <mat-grid-tile>
+        <app-speaking-text
+            [text]='"Hi, ich bin der Spion! Du musst mir mit meiner Mission helfen. Viel Erfolg"'></app-speaking-text>
+    </mat-grid-tile>
+    <mat-grid-tile>
+        <div style="width: 100%; height: 100%;">
+            <app-section-card [iconName]='"smart_toy"'> </app-section-card>
+        </div>
+    </mat-grid-tile>
+    <mat-grid-tile>
+        <div style="width: 100%; height: 100%;">
+            <app-section-card [iconName]='"smartphone"'> </app-section-card>
+        </div>
+    </mat-grid-tile>
 
-        </app-speaking-text> </mat-grid-tile>
     <mat-grid-tile>
-        <app-section-card [iconName]='"smart_toy"'> </app-section-card> </mat-grid-tile>
+        <div style="width: 100%; height: 100%;">
+            <app-section-card [iconName]='"fastfood"'> </app-section-card>
+        </div>
+    </mat-grid-tile>
     <mat-grid-tile>
-        <app-section-card [iconName]='"smartphone"'> </app-section-card></mat-grid-tile>
-    <mat-grid-tile>
-        <app-section-card [iconName]='"fastfood"'> </app-section-card> </mat-grid-tile>
-    <mat-grid-tile>
-        <app-section-card [iconName]='"shopping_bag"'> </app-section-card> </mat-grid-tile>
+        <div style="width: 100%; height: 100%;">
+            <app-section-card [iconName]='"shopping_bag"'> </app-section-card>
+        </div>
+    </mat-grid-tile>
 </mat-grid-list>
