--- a/frontend/src/app/core/components/section-card/section-card.component.html
+++ b/frontend/src/app/core/components/section-card/section-card.component.html
@@ -1,11 +1,14 @@
-<mat-card appearance = "outlined" fullWidth> 
-  <mat-card-header>
-    <mat-card-title> 
-        <mat-icon> {{iconName}} </mat-icon>
-    </mat-card-title>
-    <mat-card-subtitle></mat-card-subtitle>
-  </mat-card-header>
-  <mat-card-actions>
-    <button mat-button> Start </button>
-  </mat-card-actions>
-</mat-card>
+<mat-card appearance="outlined" fullWidth>
+    <mat-card-header>
+        <mat-card-title>
+            <mat-icon> {{iconName}} </mat-icon>
+        </mat-card-title>
+        <mat-card-subtitle></mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-actions>
+        <nav>
+            <a routerLink="/laptop"> Zum Laptop </a>
+        </nav>
+
+    </mat-card-actions>
+</mat-card> 
