--- a/frontend/src/app/core/components/section-card/section-card.component.scss
+++ b/frontend/src/app/core/components/section-card/section-card.component.scss
@@ -1,6 +1,6 @@
 mat-card{
     color: white;
     background-color: #1B4B7B;
-    width: 80%;
-    height: auto;
+    width: 100%;
+    height: 100%;
 }
