--- a/frontend/src/app/core/components/landing-page/landing-page.component.html
+++ b/frontend/src/app/core/components/landing-page/landing-page.component.html
@@ -1,32 +1,37 @@
-<mat-grid-list cols="3" rowHeight="fit" [gutterSize]="'70px'">
-    <mat-grid-tile>
-        <div style="width: 100%; height: 100%;">
-            <app-section-card [iconName]='"computer"'></app-section-card>
-        </div>
-    </mat-grid-tile>
-    <mat-grid-tile>
-        <app-speaking-text
-            [text]='"Hi, ich bin der Spion! Du musst mir mit meiner Mission helfen. Viel Erfolg"'></app-speaking-text>
-    </mat-grid-tile>
-    <mat-grid-tile>
-        <div style="width: 100%; height: 100%;">
-            <app-section-card [iconName]='"smart_toy"'> </app-section-card>
-        </div>
-    </mat-grid-tile>
-    <mat-grid-tile>
-        <div style="width: 100%; height: 100%;">
-            <app-section-card [iconName]='"smartphone"'> </app-section-card>
-        </div>
-    </mat-grid-tile>
+<div class="cont">
+    <mat-grid-list cols="3" rowHeight="fit" [gutterSize]="'30px'">
+        <mat-grid-tile>
+            <div style="width: 100%; height: 100%;">
+                <app-section-card [iconName]='"computer"'></app-section-card>
+            </div>
+        </mat-grid-tile>
+        <mat-grid-tile style="flex-flow: column;">
+            <div class="spy">
+                <div>
+                </div>
+                <app-speaking-box></app-speaking-box>
+            </div>
+        </mat-grid-tile>
+        <mat-grid-tile>
+            <div style="width: 100%; height: 100%;">
+                <app-section-card [iconName]='"smart_toy"'> </app-section-card>
+            </div>
+        </mat-grid-tile>
+        <mat-grid-tile>
+            <div style="width: 100%; height: 100%;">
+                <app-section-card [iconName]='"smartphone"'> </app-section-card>
+            </div>
+        </mat-grid-tile>
 
-    <mat-grid-tile>
-        <div style="width: 100%; height: 100%;">
-            <app-section-card [iconName]='"fastfood"'> </app-section-card>
-        </div>
-    </mat-grid-tile>
-    <mat-grid-tile>
-        <div style="width: 100%; height: 100%;">
-            <app-section-card [iconName]='"shopping_bag"'> </app-section-card>
-        </div>
-    </mat-grid-tile>
-</mat-grid-list>
+        <mat-grid-tile>
+            <div style="width: 100%; height: 100%;">
+                <app-section-card [iconName]='"fastfood"'> </app-section-card>
+            </div>
+        </mat-grid-tile>
+        <mat-grid-tile>
+            <div style="width: 100%; height: 100%;">
+                <app-section-card [iconName]='"shopping_bag"'> </app-section-card>
+            </div>
+        </mat-grid-tile>
+    </mat-grid-list>
+</div>
