added game-utilities and start-components

--- a/frontend/src/app/core/components/cockpit/header/header.component.html
+++ b/frontend/src/app/core/components/cockpit/header/header.component.html
@@ -3,7 +3,7 @@
     <span>Willkommen {{ userName }} in deinem Cyber Lab!</span>
   </div>
   <div class="center">
-    <span>Dein Score: {{ score }} Punkte</span>
+    <span>Score: {{ score }} Punkte</span>
   </div>
   <div class="right">
     <span>Fortschritt:</span>
