--- a/frontend/src/app/core/components/cockpit/landing-page/icon/icon.component.html
+++ b/frontend/src/app/core/components/cockpit/landing-page/icon/icon.component.html
@@ -1,5 +1,5 @@
 <div class="icon-container">
-    <a href="{{link}}"><img src="{{ imageSrc }}" alt="{{ iconName }}" class="icon-image" />
+    <a [routerLink]="link"><img src="{{ imageSrc }}" alt="{{ iconName }}" class="icon-image" />
       <div class="icon-name">{{ iconName }}</div>
     </a>
 
