--- a/frontend/src/app/core/components/dialog/dialog.component.html
+++ b/frontend/src/app/core/components/dialog/dialog.component.html
@@ -1,10 +1,12 @@
 <div class="box">
-
-    <div class="center">
-        <div class="dialog-1">
-            <app-speaking-text
-            [text]='dialog'></app-speaking-text>
-            <div class="left-point"></div>
+    <div class="dialog-1">
+        <app-speaking-text [text]='game.getCurrentGameStep().textToSpeech'
+            (finishedChangedTo)="finishedChanged($event)"></app-speaking-text>
+        <div class="dialog-action" *ngIf="game.getCurrentGameStep().canClickNext">
+            <button mat-icon-button (click)="goToNext()"
+                [hidden]="!showNextButton"><mat-icon
+                    fontIcon="chevron_right"></mat-icon></button>
         </div>
+        <div class="left-point"></div>
     </div>
 </div>
