--- a/frontend/src/app/core/components/cockpit/landing-page/icon/icon.component.scss
+++ b/frontend/src/app/core/components/cockpit/landing-page/icon/icon.component.scss
@@ -1,7 +1,8 @@
+$breakpoint-medium: 1320px;
 .icon-container {
     position: relative;
-    width: 250px;
-    height: 250px;
+    width: 17vw;
+    height: 17vw;
     overflow: hidden;
     cursor: pointer;
   }
@@ -31,3 +32,12 @@
     transform: translate(-50%, -60%);
   }
   
+  @media (max-width: $breakpoint-medium) {
+    .icon-container {
+      margin: 10px; // Adds space between icons
+      min-width: 150px;
+      min-height: 150px;
+  
+    }
+    
+  }
