--- a/frontend/src/app/core/components/dialog/dialog.component.scss
+++ b/frontend/src/app/core/components/dialog/dialog.component.scss
@@ -1,3 +1,4 @@
+$breakpoint-medium: 1320px;
  .box {
    width: 100%;
    height: 100%;
@@ -40,3 +41,16 @@
    left: -10%;
    transform: rotate(60deg);
  }
+
+ @media (max-width: $breakpoint-medium) {
+  .dialog-1 {
+    font-size: 1rem;
+    height: fit-content;
+    max-height: 250px;
+    text-align: left;
+    width: 20vw;
+    min-width: 150px;
+    border-radius: 10px;
+    padding: 10px;
+  }
+}
