--- a/frontend/src/app/features/start/start-name/start-name.component.html
+++ b/frontend/src/app/features/start/start-name/start-name.component.html
@@ -1,20 +1,17 @@
 <div class="container">
-
     <div>
-        <h2>
-            Wie lautet dein Spion-Name?
-        </h2>
+        <h2>Wie lautet dein Spion-Name?</h2>
     </div>
 
     <div>
         <mat-form-field appearance="outline" style="width: 300px;">
             <mat-label>Name</mat-label>
-            <input matInput>
+            <input matInput #nameInput formControlName = "Name" required>
         </mat-form-field>
     </div>
 
     <div>
-        <a mat-flat-button extended routerLink="/cockpit">
+        <a mat-flat-button extended (click)="start()">
             <mat-icon>play_arrow</mat-icon>
             Lass uns loslegen!
         </a>
