--- a/frontend/src/app/core/components/lexicon/lexicon.component.scss
+++ b/frontend/src/app/core/components/lexicon/lexicon.component.scss
@@ -1,6 +1,7 @@
 .book-dialog {
   display: flex;
   height: 100%;
+  width: fit-content;
   background-color: #fdf8e2;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
   border-radius: 8px;
