--- a/frontend/src/app/core/components/spy/dialog/dialog.component.scss
+++ b/frontend/src/app/core/components/spy/dialog/dialog.component.scss
@@ -2,7 +2,9 @@ $breakpoint-medium: 1320px;
  .box {
    width: 100%;
    height: 100%;
-   position: relative;
+   position: absolute;
+   bottom: 1px;
+   left: 300px;
    display: block;
  }
 
