--- a/frontend/src/app/features/phone/phone.component.html
+++ b/frontend/src/app/features/phone/phone.component.html
@@ -1,3 +1,15 @@
-<div class="social_media">
-    <app-account></app-account>
+<div class="container">
+    <mat-grid-list cols="3" rowHeight="fit">
+        <mat-grid-tile></mat-grid-tile>
+        <mat-grid-tile>
+            <div class="social_media" *ngIf="showPhone">
+                <app-account></app-account>
+            </div>
+        </mat-grid-tile>
+        <mat-grid-tile>
+            <div class="spy-column">
+                <app-spy [gameStep]="phoneService.currentGameStep" (clickedNext)="phoneService.next()"></app-spy>
+            </div>
+        </mat-grid-tile>
+    </mat-grid-list>
 </div>
