--- a/frontend/src/app/core/components/cockpit/account/account.component.scss
+++ b/frontend/src/app/core/components/cockpit/account/account.component.scss
@@ -1,18 +1,51 @@
 .account-card {
   width: 400px;
+  height: 85vh;
   border: 1px solid #000000;
   border-radius: 8px;
   overflow: hidden;
   font-family: Arial, sans-serif;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  background-color: #f5f5f5;
+  background-color: #000000;
+}
+.follow-button-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px; /* Optional spacing */
+}
+
+.follow-button {
+  background-color: #007bff; /* Blue color */
+  color: #fff; /* White text */
+  border: none;
+  width: 100%;
+  border-radius: 5px; /* Rounded corners */
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+
+  &:hover {
+    background-color: #0056b3; /* Darker blue on hover */
+  }
+
+  &:focus {
+    outline: none; /* Remove default focus outline */
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5); /* Add a subtle glow */
+  }
+
+  &:active {
+    background-color: #004080; /* Even darker blue when active */
+  }
 }
 
 .profile-header {
   display: flex;
   align-items: center;
   padding: 15px;
-  background-color: #f5f5f5;
+  background-color: #000000;
+  color: #fff;
 }
 
 .avatar {
@@ -51,7 +84,7 @@
 
 .stat-label {
   font-size: 15px;
-  color: #666;
+  color: #ffffff;
 }
 
 /* Body-Bereich für die Bio und Posts */
@@ -61,7 +94,25 @@
 
 .profile-body p {
   margin: 0 0 12px;
-  color: #333;
+  color: #ffffff;
+}
+.profile-body {
+  .posts-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px; /* Abstand zwischen den Elementen */
+    justify-content: space-between;
+
+    .post {
+      width: calc(33.33% - 10px); /* Drei Elemente pro Zeile mit Platz für den Abstand */
+      margin-bottom: 10px; /* Abstand zwischen den Zeilen */
+      img {
+        width: 100%;
+        height: auto;
+        border-radius: 5px; /* Optional: abgerundete Ecken */
+      }
+    }
+  }
 }
 
 .posts-image {
@@ -69,3 +120,32 @@
   height: auto;
   border-radius: 4px;
 }
+
+
+.follower-info {
+  display: flex;
+  align-items: center; 
+  color: #fff; /* White text color, adjust based on background */
+  .profile-images {
+    display: flex;
+    margin-right: 10px;
+
+    .profile-image {
+      width: 24px; /* Size of profile images */
+      height: 24px;
+      border-radius: 50%; /* Makes the images circular */
+      border: 2px solid #000; /* Optional: border for contrast */
+      margin-left: -8px; /* Overlapping effect */
+
+      &:first-child {
+        margin-left: 0; /* No overlap for the first image */
+      }
+    }
+  }
+
+  .follower-text {
+    font-size: 10px; /* Adjust font size as needed */ /* Prevents text wrapping */
+    text-align: center;
+  }
+}
+
