--- a/frontend/src/app/features/phone/phone.component.scss
+++ b/frontend/src/app/features/phone/phone.component.scss
@@ -1,8 +1,124 @@
-.social_media {
-    display: flex;
-    justify-content: center; 
-    align-items: center; 
-    min-height: 100vh;
-    background-color: #8559ec; 
+.container {
+  background-image: url('../../../../public/assets/phone/bedroom.png');
+  background-size: cover;
+  height: 100vh;
+  position: relative;
+  opacity: 1;
+  transition: opacity 0.7s ease-in-out, visibility 0.7s ease-in-out;
+
+  &.hidden {
+    opacity: 0;
+    visibility: hidden;
+    display: none;
+  }
+
+  .spy-column {
+    position: absolute;
+    top: 40%;
+    left: 40%;
+    width: 100%;
+    animation: fadeIn 0.7s ease-in-out;
+  }
 }
 
+.container1 {
+  background-image: url('../../../../public/assets/phone/phonebed.png');
+  background-size: cover;
+  height: 100vh;
+  position: relative;
+  opacity: 1;
+  transition: opacity 0.7s ease-in-out, visibility 0.7s ease-in-out;
+
+  &.hidden {
+    opacity: 0;
+    visibility: hidden;
+  }
+
+  .spy-column1 {
+    position: absolute;
+    bottom: 0%;
+    left: 0px;
+    width: 100%;
+    animation: fadeIn 0.7s ease-in-out;
+  }
+  .notification-image {
+    position: absolute; /* Position relative to the page-container */
+    top: 8%; /* Adjust to move the image to the desired position */
+    left: 43%; /* Center horizontally relative to the container */
+    width: 300px;
+  }
+  .account{
+    position: absolute; /* Position relative to the page-container */
+    top: 9%; /* Adjust to move the image to the desired position */
+    left: 43.3%; /* Center horizontally relative to the container */
+    z-index: 10;
+    &.hidden {
+      opacity: 0;
+      visibility: hidden;
+    }
+  }
+}
+
+.btn {
+  font-size: 30px;
+  font-weight: bold;
+  color: white;
+  padding: 15px 30px;
+  border: 2px solid black;
+  border-radius: 10px;
+  cursor: pointer;
+  text-shadow: 1px 1px 2px black;
+  transition: opacity 0.7s ease-in-out, visibility 0.7s ease-in-out;
+
+  &.hidden {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+.btn.real {
+  background-color: #00ff00; /* Bright green */
+  position: absolute;
+  top: 50%;
+  left: 20%;
+}
+
+.btn.fake {
+  top: 50%;
+  right: 20%;
+  position: absolute;
+  background-color: #ff0000; /* Bright red */
+}
+
+.btn:hover {
+  filter: brightness(0.9);
+}
+
+
+:host {
+    display: block;
+    width: 100%;
+    height: 100vh;
+    background-color: black; // Matches the fallback
+    overflow: hidden; // Avoid unwanted scrollbars
+  }
+// Define the keyframes for the animation
+@keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+  
+  // Apply the animation to the body or a specific element
+  .container {
+    animation: fadeIn 0.7s ease-in-out;
+  }
+  
+  // For specific elements, use:
+  .spy-column {
+    animation: fadeIn 0.7s ease-in-out;
+  }
+  
