--- a/frontend/src/app/features/phone/phone.component.html
+++ b/frontend/src/app/features/phone/phone.component.html
@@ -1,3 +1,17 @@
-<div class="social_media">
-    <app-account [account]="AccountArray[1]"></app-account>
+<div class="container" [class.hidden]="phoneService.Hide">
+    <div class="spy-column">
+        <app-spy [gameStep]="phoneService.currentGameStep" (clickedNext)="phoneService.next()"></app-spy>
+    </div>
+</div>
+<div class="container1" [class.hidden]="!phoneService.Hide">
+    <button class="btn real" [class.hidden]="phoneService.BHide" (click)="onRealClick()">Echt</button>
+    <button class="btn fake" [class.hidden]="phoneService.BHide" (click)="onFakeClick()">FAKE</button>     
+    <div class="spy-column1">
+        <app-spy [gameStep]="phoneService.currentGameStep" (clickedNext)="phoneService.next()"></app-spy>
+    </div>
+    <img src= "assets/phone/Phone.png" alt="Notification Overlay" class="notification-image" />
+    <app-account [account]="AccountArray[0]" class="account " [class.hidden]="!phoneService.Profile[0]"></app-account>
+    <app-account [account]="AccountArray[1]" class="account " [class.hidden]="!phoneService.Profile[1]"></app-account>
+    <app-account [account]="AccountArray[2]" class="account " [class.hidden]="!phoneService.Profile[2]"></app-account>
+    <app-account [account]="AccountArray[3]" class="account " [class.hidden]="!phoneService.Profile[3]"></app-account>
 </div>
