--- a/frontend/src/app/features/cookie/kitchen/kitchen.component.html
+++ b/frontend/src/app/features/cookie/kitchen/kitchen.component.html
@@ -1,7 +1,7 @@
 <div class="kitchen-container">
 
     <div class="spycol">
-        <app-spy [gameStep]="cookieService.currentGameStep" (clickedNext)="cookieService.next()"></app-spy>
+        <app-spy [gameStep]="cookieService.currentGameStep" (clickedNext)="next()"></app-spy>
     </div>
     <app-shelf></app-shelf>
 
