--- a/frontend/src/app/core/components/baker/baker.component.scss
+++ b/frontend/src/app/core/components/baker/baker.component.scss
@@ -1,6 +1,8 @@
 .container{
     position: relative;
-    width: fit-content;
+    //width: fit-content;
+    height: fit-content;
+    margin: 0;
 }
 
 .sticky {
