--- a/frontend/src/app/features/cookie/kitchen/kitchen.component.scss
+++ b/frontend/src/app/features/cookie/kitchen/kitchen.component.scss
@@ -1,5 +1,5 @@
 .kitchen-container {
-    background-image: url('/assets/cookies/table.png');
+    background-image: url('/assets/cookies/kitchen.png');
     background-size: cover;
     background-position: center top;
     height: 100%;
