--- a/frontend/src/app/features/cookie/game/game.component.scss
+++ b/frontend/src/app/features/cookie/game/game.component.scss
@@ -42,8 +42,8 @@
 
 
 .bowl {
-    width: 300px;
-    height: 300px;
+    width: 80%;
+    height: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
