--- a/frontend/src/app/features/start/start-name/start-name.component.html
+++ b/frontend/src/app/features/start/start-name/start-name.component.html
@@ -13,7 +13,7 @@
     <div>
         <a mat-flat-button extended (click)="start()">
             <mat-icon>play_arrow</mat-icon>
-            Lass uns loslegen!
+            Weiter
         </a>
     </div>
 </div>
