--- a/frontend/src/app/features/start/start-name/start-name.component.scss
+++ b/frontend/src/app/features/start/start-name/start-name.component.scss
@@ -3,6 +3,7 @@
     width: 100%;
     background: rgba(0, 0, 0, .80) url("../../../../../public/assets/office.png");
     background-blend-mode: darken;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     justify-content: center;
