--- a/frontend/src/app/features/cookie/bakery-outside/bakery-outside.component.scss
+++ b/frontend/src/app/features/cookie/bakery-outside/bakery-outside.component.scss
@@ -1,4 +1,5 @@
 .container {
+    background-color: #454545;
     background-image: url('../../../../../public/assets/cookies/bakeryclosed.png');
     background-size: cover;
     height: 100%;
