--- a/frontend/src/app/features/cookie/bakery-inside/bakery-inside.component.scss
+++ b/frontend/src/app/features/cookie/bakery-inside/bakery-inside.component.scss
@@ -1,5 +1,5 @@
 .container {
-    background-image: url('../../../../../public/assets/cookies/bakeryinside.png');
+    background-image: url('/assets/cookies/bakeryinside.png');
     background-size: cover;
     height: 100%;
     width: 100%;
