--- a/frontend/src/app/features/cookie/kitchen/shelf/shelf.component.scss
+++ b/frontend/src/app/features/cookie/kitchen/shelf/shelf.component.scss
@@ -1,5 +1,5 @@
 .shelf {
-    background-image: url('../../../../../../public/assets/cookies/shelf.png');
+    background-image: url('/assets/cookies/shelf.png');
     background-size: 100% 100%;
     background-position: center;
     margin-top: 50px;
