--- a/frontend/src/app/features/phone/phone.component.scss
+++ b/frontend/src/app/features/phone/phone.component.scss
@@ -1,5 +1,5 @@
 .container {
-  background-image: url('../../../../public/assets/phone/bedroom.png');
+  background-image: url('/assets/phone/bedroom.png');
   background-size: cover;
   height: 100vh;
   position: relative;
@@ -22,7 +22,7 @@
 }
 
 .container1 {
-  background-image: url('../../../../public/assets/phone/phonebed.png');
+  background-image: url('/assets/phone/phonebed.png');
   background-size: cover;
   height: 100vh;
   position: relative;
