--- a/frontend/src/app/core/components/cockpit/landing-page/landing-page.component.scss
+++ b/frontend/src/app/core/components/cockpit/landing-page/landing-page.component.scss
@@ -13,7 +13,7 @@ $breakpoint-small: 700px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: rgba(0, 0, 0, .80) url("../../../../../../public/assets/office.png");
+  background: rgba(0, 0, 0, .80) url("/assets/office.png");
   background-blend-mode: darken;
   background-position: center;
   background-size: cover;
