--- a/frontend/src/app/features/cookie/bakery-outside/bakery-outside.component.scss
+++ b/frontend/src/app/features/cookie/bakery-outside/bakery-outside.component.scss
@@ -1,6 +1,6 @@
 .container {
     background-color: #454545;
-    background-image: url('../../../../../public/assets/cookies/bakeryclosed.png');
+    background-image: url('/assets/cookies/bakeryclosed.png');
     background-size: cover;
     height: 100%;
     width: 100%;
