--- a/frontend/src/app/core/components/spy/spy.component.html
+++ b/frontend/src/app/core/components/spy/spy.component.html
@@ -1,4 +1,8 @@
-<div class="container">
+<div class="container" [class.hidden] ="isRight">
     <app-spy-avatar></app-spy-avatar>
-    <app-dialog class="sticky" [gameStep]="gameStep" (clickedOnNext)="clickedNext.emit()"></app-dialog>
+    <app-dialog class="sticky" [who]="Role" [isRight]="!isRight" [gameStep]="gameStep" (clickedOnNext)="clickedNext.emit()"></app-dialog>
+</div>
+<div class="container1" [class.hidden]="!isRight">
+    <app-dialog class="sticky" [who]="Role" [isRight]="!isRight" [gameStep]="gameStep" (clickedOnNext)="clickedNext.emit()"></app-dialog>
+    <app-spy-avatar></app-spy-avatar>
 </div>
