--- a/frontend/src/app/features/shopping/shopping.component.html
+++ b/frontend/src/app/features/shopping/shopping.component.html
@@ -4,6 +4,11 @@
     <img src="assets/shopping/website.png" class="container2-image" [class.blurred]="shopping.showCookieDialog" *ngIf="!shopping.Product">
     <img src="assets/shopping/webpages/web1.png" class="container3-image" *ngIf="shopping.web1">
     <img src="assets/shopping/webpages/web2.png" class="container3-image" *ngIf="shopping.web2">
+    <img src="assets/shopping/webpages/web3.png" class="container3-image" *ngIf="shopping.web3">
+    <img src="assets/shopping/webpages/web4.png" class="container3-image" *ngIf="shopping.web4">
+    <img src="assets/shopping/webpages/web5.png" class="container3-image" *ngIf="shopping.web5">
+    <img src="assets/shopping/webpages/web6.png" class="container3-image" *ngIf="shopping.web6">
+    <app-terms [class.hidden]="!shopping.terms"></app-terms>
     <app-product-web *ngIf="shopping.Product"></app-product-web>
     <app-cookies *ngIf="shopping.showCookieDialog"></app-cookies>
     <button class="custom-button left" [class.hidden] = "!shopping.question" (click)="Left()">
@@ -13,8 +18,8 @@
       Überprüfen, ob<br>Website authentisch<br>ist!
     </button>
     <div class="spy-column" [ngClass]="{
-      'hidden': shopping.showCookieDialog || shopping.question,
-      'move-top-right': shopping.move
+      'hidden': shopping.showCookieDialog || shopping.question || shopping.hiddespy,
+      'move-top-right': shopping.move, 'move-top-right-abit': shopping.moveabit
     }">
       <app-spy #spy
         [gameStep]="shopping.currentGameStep"
